Bug 219630 - undo while moving stacks results in incorrect piles.
Summary: undo while moving stacks results in incorrect piles.
Status: RESOLVED FIXED
Alias: None
Product: kpat
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Parker Coates
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-22 04:59 UTC by Dan Keshet
Modified: 2010-01-06 18:52 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dan Keshet 2009-12-22 04:59:15 UTC
Version:            (using KDE 4.3.2)
OS:                Linux
Installed from:    Ubuntu Packages

If you use a keyboard shortcut to click undo while moving a large stack of cards in freecell, funny things will happen.  Sometimes it undoes the action previous to moving the stack, sometimes it undoes moving the stack and the previous undo, and sometimes it leaves the board in a state in which no cards react to mouse clicks at all.
Comment 1 Parker Coates 2010-01-06 18:52:25 UTC
SVN commit 1070756 by coates:

Prevent undo and redo from interupting an animation.

There are better ways to do this, but this should be good enough for the
time being. For KPat 3.4, I'm considering adding a more sofisticated
event queueing system.

BUG: 219630

 M  +8 -0      dealer.cpp


WebSVN link: http://websvn.kde.org/?view=rev&revision=1070756