Prevent undo and redo from interupting an animation.

There are better ways to do this, but this should be good enough for the
time being. For KPat 3.4, I'm considering adding a more sofisticated
event queueing system.

BUG: 219630

svn path=/trunk/KDE/kdegames/kpat/; revision=1070756